[tool.poetry]
name = "lfp-image-preprocessor"
version = "0.1.0"
description = "Image tiling & tag-search-precomputer for the LeftEyePro.com website"
authors = ["c7c8 <me@crmyers.dev>"]
license = "GPLv3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "10.4.x"
dearpygui = "1.11.x"
pyyaml = "6.0.x"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
